k/site/base/consul.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: consul-ui
  namespace: default
spec:
  tls: {}
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`consul.{domain:.+}`)
      kind: Rule
      services:
        - name: consul-ui
          port: 80
