k/site/base/vault.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: default
spec:
  tls: {}
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`vault.{domain:.+}`)
      kind: Rule
      services:
        - name: vault
          port: 8200
